<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.rubix327</groupId>
    <artifactId>fancynations</artifactId>
    <version>1.0.3</version>

    <name>FancyNations</name>

    <properties>
        <foundation.version>5.12.7</foundation.version>
        <java.version>16</java.version>
        <plugin.version>1.16.5-R0.1-SNAPSHOT</plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>

                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <finalName>${project.name}-${project.version}</finalName>
                            <artifactSet>
                                <includes>
                                    <include>org.mineacademy:Game*</include>
                                    <include>com.github.kangarko:Foundation*</include>
                                </includes>
                                <excludes>
                                    <exclude>org.mineacademy:GameAPI*</exclude>
                                </excludes>
                            </artifactSet>
                            <relocations>
                                <relocation>
                                    <pattern>org.mineacademy</pattern>
                                    <shadedPattern>${project.groupId}.${project.artifactId}.lib</shadedPattern>
                                    <excludes>
                                        <exclude>org.mineacademy.${project.artifactId}.*</exclude>
                                        <exclude>org.mineacademy.gameapi.*</exclude>
                                        <exclude>org.mineacademy.boss.*</exclude>
                                        <exclude>org.mineacademy.worldeditbridge.*</exclude>
                                    </excludes>
                                </relocation>
                            </relocations>
                        </configuration>

                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>com.destroystokyo.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${plugin.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.kangarko</groupId>
            <artifactId>Foundation</artifactId>
            <version>${foundation.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.28</version>
        </dependency>

        <dependency>
            <groupId>net.Indyuce</groupId>
            <artifactId>mmocore</artifactId>
            <version>1.9.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/libs/MMOCore-1.9.1.jar</systemPath>
        </dependency>
    </dependencies>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>
</project>
